--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
 
-
 * {
     margin: 0;
     padding: 0;
@@ -23,7 +22,7 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50% , -50%);
-    max-width: 450px;
+    max-width: 400px;
     background-color: white;
     border-radius: 20px;
     overflow: hidden;
@@ -43,6 +42,7 @@ body {
 .text-content p.subtitle {
     color:#8a8a8a;
     margin-bottom: 25px;
+    text-align: center;
 }
 
 
@@ -142,3 +142,4 @@ a.cancel-btn:hover {
         padding: 9% 7%;
     }
 }
+
